# Trackly

./: .gitignore  AGENT.md  Dockerfile  Dockerfile.lambda  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
app/: config.py  handler.py  main.py
app/db/: session.py
app/models/: orm.py  schemas.py
app/routers/: admin.py  api_keys.py  emails.py  events.py  feedback.py  ingest.py  organizations.py  playground.py  stats.py  traces.py  users.py
app/services/: auth.py  billing.py  cache.py  email.py  email_campaign.py  event_filters.py  export.py  insights_engine.py  playground.py  pricing.py  pricing_catalog.py  project_access.py  project_budgets.py  rate_limit.py
frontend/: components.json  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/(user)/: layout.tsx
frontend/app/(user)/api-keys/: page.tsx
frontend/app/(user)/budgets/: page.tsx
frontend/app/(user)/dashboard/: page.tsx
frontend/app/(user)/events/: page.tsx
frontend/app/(user)/organizations/: page.tsx
frontend/app/(user)/organizations/members/: page.tsx
frontend/app/(user)/organizations/usage/: page.tsx
frontend/app/(user)/playground/: page.tsx
frontend/app/(user)/playground/analyse-all/: page.tsx
frontend/app/(user)/settings/: page.tsx
frontend/app/(user)/visualise/: page.tsx
frontend/app/changelogs/: layout.tsx  page.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/llms-full.txt/: route.ts
frontend/app/llms.txt/: route.ts
frontend/app/resources/: page.tsx
frontend/app/resources/[chapter]/: opengraph-image.tsx  page.tsx
frontend/app/unsubscribe/: page.tsx
frontend/components/custom/: aboutAndContact.tsx  app-sidebar.tsx  article-code-block.tsx  docs-options.tsx  dynamic-breadcrumb.tsx  features.tsx  feedback-dialog.tsx  feedback-form.tsx  footer.tsx  header.tsx  hero.tsx  howItWorks.tsx  platform-tour.tsx  popular-guides.tsx  pricing.tsx  quick-start.tsx  resource-icons.tsx  resources-search.tsx  resources-shell.tsx  testimonial-card.tsx  testimonials.tsx  trace-feature.tsx
frontend/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  tweet-card.tsx
frontend/content/resources/ai-agents/: 01-what-are-agents.mdx  02-tools-and-memory.mdx  03-agent-loops.mdx  04-planning-and-reflection.mdx  05-multi-agent-systems.mdx  _meta.json
frontend/content/resources/langchain/: 01-getting-started.mdx  02-chains-and-runnables.mdx  03-langchain-agents.mdx  _meta.json
frontend/content/resources/llm-costs/: 01-understanding-token-costs.mdx  02-provider-comparison.mdx  03-tracking-with-trackly.mdx  _meta.json
frontend/content/resources/rag/: 01-naive-rag.mdx  02-advanced-rag.mdx  03-agentic-rag.mdx  04-graph-rag.mdx  _meta.json
frontend/content/resources/ship-ai-without-guesswork/: 01-track-token-usage-like-a-product-team.mdx  02-use-playground-before-you-switch-models.mdx  03-trace-agent-runs-with-graphs.mdx  _meta.json
frontend/lib/: auth.ts  playground.ts  resources.ts  site.ts
frontend/lib/store/: StoreProvider.tsx  store.ts
frontend/lib/store/features/: apiKeysSlice.ts  eventsSlice.ts  projectsSlice.ts  statsSlice.ts  tracesSlice.ts
tests/: test_admin.py  test_anthropic_tracking.py  test_backend.py  test_email_campaign.py  test_gemini_batch.py  test_gemini_key_flexibility.py  test_gemini_tracking.py  test_landing_cache.py  test_ollama_async_client.py  test_playground.py  test_project_budgets.py  test_project_visibility.py  test_routers.py  test_tracing.py  test_user_registration.py
trackly/: __init__.py  client.py  constants.py  providers.py  tracing.py  utils.py  worker.py
trackly/providers_impl/: anthropic.py  gemini.py  ollama.py
(+3 files in other folders)
