[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackly"
version = "0.1.0"
description = "Zero-overhead AI usage tracking for LangChain and LLM APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "observability", "langchain", "openai", "anthropic", "cost-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "langchain-core>=1.2.20",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Backend API dependencies
server = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.0.0",
]
# AI Providers
openai     = ["langchain-openai>=0.1.0"]
anthropic  = ["langchain-anthropic>=0.1.0"]
gemini     = ["langchain-google-genai>=1.0.0"]
ollama     = ["langchain-ollama>=0.1.0"]
all        = [
    "langchain-openai>=0.1.0", 
    "langchain-anthropic>=0.1.0", 
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0"
]
dev        = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage    = "https://trackly.dev"
Repository  = "https://github.com/udaykumar-dhokia/trackly"
"Bug Tracker" = "https://github.com/udaykumar-dhokia/trackly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
